--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,3 +5,5 @@
     {{question-tile question=question destroyQuestion="destroyQuestion"}}
   {{/each}}
 </ul>
+
+{{new-question saveQuestion2="saveQuestion3"}}
