incorporate update functionality for questions

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,4 +1,5 @@
 <li>
   {{question.author}}'s question: {{question.content}}
   <button {{action 'delete' question}}>Delete Question</button>
+  {{update-question question=question update="update"}}
 </li>
