--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
 <h5>Questions</h5>
 <ul>
   {{#each model as |question|}}
-    {{question-tile question=question destroyQuestion="destroyQuestion"}}
+    {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
   {{/each}}
 </ul>
 
