implement dynamic routing for questions and move update and delete capabilities to question-detail page

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,5 +1,3 @@
 <li>
-  {{question.author}}'s question: {{question.content}}
-  <button {{action 'delete' question}}>Delete Question</button>
-  {{update-question question=question update="update"}}
+{{#link-to 'question' question.id}}{{question.author}}'s Question: {{question.content}} {{/link-to}}
 </li>
