--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,2 +1,3 @@
 <h2>More information about {{question.author}}'s question: {{question.content}}</h2>
-{{question-detail question=model}}
+{{update-question question=model update="update"}}
+{{question-detail question=model destroyQuestion="destroyQuestion"}}
