--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
 <div class= "container">
   <header class= "jumbotron">
     <h1>Question and Answer</h1>
+    <a href='/'>Home</a>
   </header>
     {{outlet}}
   <hr>
